objects/CMPL123__RDC_Multi_Edit_Info__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Conflicting_User_Name__c</fullName>
        <label>Conflicting User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User_Session_Id__c</fullName>
        <label>User Session Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User_Status__c</fullName>
        <label>User Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>RDC_Multi_Edit_Infos</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>RDC Multi Edit Info</label>
    <nameField>
        <displayFormat>ME-{000000}</displayFormat>
        <label>RDC Multi Edit Info Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>RDC Multi Edit Infos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>